; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_neighbour.c_neigh_rand_reach_time.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_neighbour.c_neigh_rand_reach_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @neigh_rand_reach_time(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = call i64 (...) @prandom_u32()
  %7 = load i64, i64* %2, align 8
  %8 = urem i64 %6, %7
  %9 = load i64, i64* %2, align 8
  %10 = lshr i64 %9, 1
  %11 = add i64 %8, %10
  br label %13

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %12, %5
  %14 = phi i64 [ %11, %5 ], [ 0, %12 ]
  ret i64 %14
}

declare dso_local i64 @prandom_u32(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
